// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`completion completion for constant access references 1`] = `
Array [
  Function {
    "description": "Officia aliquip adipisicing et nulla et laboris dolore labore.
",
    "name": TypeName {
      "name": "\\\\test_function",
    },
    "parameters": Array [],
    "scopeVar": ScopeVar {
      "variables": Object {},
    },
    "types": Array [],
  },
  Function {
    "description": "",
    "name": TypeName {
      "name": "\\\\test_function1",
    },
    "parameters": Array [
      Parameter {
        "location": Location {},
        "name": "$stringParam",
        "refKind": 3,
        "scope": null,
        "type": TypeComposite {
          "_types": Array [
            TypeName {
              "name": "string",
            },
          ],
        },
        "value": "",
      },
      Parameter {
        "location": Location {},
        "name": "$intParam",
        "refKind": 3,
        "scope": null,
        "type": TypeComposite {
          "_types": Array [
            TypeName {
              "name": "int",
            },
          ],
        },
        "value": "",
      },
      Parameter {
        "location": Location {},
        "name": "$boolParam",
        "refKind": 3,
        "scope": null,
        "type": TypeComposite {
          "_types": Array [
            TypeName {
              "name": "boolean",
            },
          ],
        },
        "value": "",
      },
      Parameter {
        "location": Location {},
        "name": "$floatParam",
        "refKind": 3,
        "scope": null,
        "type": TypeComposite {
          "_types": Array [
            TypeName {
              "name": "float",
            },
          ],
        },
        "value": "",
      },
    ],
    "scopeVar": ScopeVar {
      "variables": Object {
        "$boolParam": TypeComposite {
          "_types": Array [
            TypeName {
              "name": "boolean",
            },
          ],
        },
        "$floatParam": TypeComposite {
          "_types": Array [
            TypeName {
              "name": "float",
            },
          ],
        },
        "$intParam": TypeComposite {
          "_types": Array [
            TypeName {
              "name": "int",
            },
          ],
        },
        "$stringParam": TypeComposite {
          "_types": Array [
            TypeName {
              "name": "string",
            },
          ],
        },
        "$test": TypeComposite {
          "_types": Array [
            TypeName {
              "name": "int",
            },
          ],
        },
      },
    },
    "types": Array [
      TypeName {
        "name": "boolean",
      },
      TypeName {
        "name": "string",
      },
      TypeName {
        "name": "int",
      },
      TypeName {
        "name": "float",
      },
      TypeName {
        "name": "\\\\TestClass",
      },
    ],
  },
  Function {
    "description": "Test function 2",
    "name": TypeName {
      "name": "\\\\test_function2",
    },
    "parameters": Array [
      Parameter {
        "location": Location {},
        "name": "$param1",
        "refKind": 3,
        "scope": null,
        "type": TypeComposite {
          "_types": Array [
            TypeName {
              "name": "\\\\array|int",
            },
          ],
        },
        "value": "",
      },
      Parameter {
        "location": Location {},
        "name": "$param2",
        "refKind": 3,
        "scope": null,
        "type": TypeComposite {
          "_types": Array [
            TypeName {
              "name": "string",
            },
          ],
        },
        "value": "",
      },
    ],
    "scopeVar": ScopeVar {
      "variables": Object {
        "$param1": TypeComposite {
          "_types": Array [
            TypeName {
              "name": "\\\\array|int",
            },
          ],
        },
        "$param2": TypeComposite {
          "_types": Array [
            TypeName {
              "name": "string",
            },
          ],
        },
      },
    },
    "types": Array [],
  },
]
`;

exports[`completion completion for constant access references 2`] = `
Array [
  Constant {
    "name": TypeName {
      "name": "\\\\TEST_CONST",
    },
    "type": TypeName {
      "name": "int",
    },
    "value": "123",
  },
  Constant {
    "name": TypeName {
      "name": "\\\\TEST_CONST1",
    },
    "type": TypeName {
      "name": "int",
    },
    "value": "456",
  },
  Constant {
    "name": TypeName {
      "name": "\\\\TEST_CONST2",
    },
    "type": TypeName {
      "name": "int",
    },
    "value": "789",
  },
  Constant {
    "name": TypeName {
      "name": "\\\\TEST_CONST_STRING",
    },
    "type": TypeName {
      "name": "string",
    },
    "value": "'Simple string'",
  },
  Constant {
    "name": TypeName {
      "name": "\\\\TEST_CONST_STRING2",
    },
    "type": TypeName {
      "name": "string",
    },
    "value": "'Not so simple string'",
  },
  Constant {
    "name": TypeName {
      "name": "\\\\TEST_CONST_STRING3",
    },
    "type": TypeName {
      "name": "string",
    },
    "value": "'Quite complex ' . TEST_CONST_STRING",
  },
  DefineConstant {
    "name": TypeName {
      "name": "\\\\TEST_DEFINE_CONSTANT",
    },
    "type": TypeName {
      "name": "boolean",
    },
    "value": "false",
  },
  DefineConstant {
    "name": TypeName {
      "name": "\\\\TEST_STRING_CONSTANT1",
    },
    "type": TypeName {
      "name": "string",
    },
    "value": "'simple string'",
  },
  DefineConstant {
    "name": TypeName {
      "name": "\\\\TEST_STRING_CONSTANT2",
    },
    "type": TypeName {
      "name": "string",
    },
    "value": "'not so simple string'",
  },
  DefineConstant {
    "name": TypeName {
      "name": "\\\\TEST_STRING_CONSTANT3",
    },
    "type": TypeName {
      "name": "string",
    },
    "value": "'more of ' . TEST_STRING_CONSTANT2",
  },
]
`;

exports[`completion completion for constant access references 3`] = `
Array [
  Constant {
    "name": TypeName {
      "name": "\\\\TEST_CONST_STRING",
    },
    "type": TypeName {
      "name": "string",
    },
    "value": "'Simple string'",
  },
  Constant {
    "name": TypeName {
      "name": "\\\\TEST_CONST_STRING2",
    },
    "type": TypeName {
      "name": "string",
    },
    "value": "'Not so simple string'",
  },
  Constant {
    "name": TypeName {
      "name": "\\\\TEST_CONST_STRING3",
    },
    "type": TypeName {
      "name": "string",
    },
    "value": "'Quite complex ' . TEST_CONST_STRING",
  },
]
`;

exports[`completion completion for constant access references 4`] = `
Array [
  Constant {
    "name": TypeName {
      "name": "\\\\TEST_CONST",
    },
    "type": TypeName {
      "name": "int",
    },
    "value": "123",
  },
  Constant {
    "name": TypeName {
      "name": "\\\\TEST_CONST1",
    },
    "type": TypeName {
      "name": "int",
    },
    "value": "456",
  },
  Constant {
    "name": TypeName {
      "name": "\\\\TEST_CONST2",
    },
    "type": TypeName {
      "name": "int",
    },
    "value": "789",
  },
  DefineConstant {
    "name": TypeName {
      "name": "\\\\TEST_DEFINE_CONSTANT",
    },
    "type": TypeName {
      "name": "boolean",
    },
    "value": "false",
  },
  DefineConstant {
    "name": TypeName {
      "name": "\\\\TEST_STRING_CONSTANT1",
    },
    "type": TypeName {
      "name": "string",
    },
    "value": "'simple string'",
  },
  DefineConstant {
    "name": TypeName {
      "name": "\\\\TEST_STRING_CONSTANT2",
    },
    "type": TypeName {
      "name": "string",
    },
    "value": "'not so simple string'",
  },
  DefineConstant {
    "name": TypeName {
      "name": "\\\\TEST_STRING_CONSTANT3",
    },
    "type": TypeName {
      "name": "string",
    },
    "value": "'more of ' . TEST_STRING_CONSTANT2",
  },
  DefineConstant {
    "name": TypeName {
      "name": "\\\\CONSTANT_SAMPLE1",
    },
    "type": TypeName {
      "name": "boolean",
    },
    "value": "false",
  },
  Constant {
    "name": TypeName {
      "name": "\\\\TEST_CONST_STRING",
    },
    "type": TypeName {
      "name": "string",
    },
    "value": "'Simple string'",
  },
  Constant {
    "name": TypeName {
      "name": "\\\\TEST_CONST_STRING2",
    },
    "type": TypeName {
      "name": "string",
    },
    "value": "'Not so simple string'",
  },
  Constant {
    "name": TypeName {
      "name": "\\\\TEST_CONST_STRING3",
    },
    "type": TypeName {
      "name": "string",
    },
    "value": "'Quite complex ' . TEST_CONST_STRING",
  },
]
`;

exports[`completion completion for current scoped member references 1`] = `
Array [
  Property {
    "description": "",
    "location": Location {
      "range": Range {
        "end": 106,
        "start": 93,
      },
      "relativeUri": "case/completion/currentScopedMember.php",
    },
    "modifier": SymbolModifier {
      "modifier": 32,
      "visibility": 2,
    },
    "name": "$NUM_CPUS",
    "scope": TypeName {
      "name": "\\\\CurrentScopedMember",
    },
  },
]
`;

exports[`completion completion for current scoped member references 2`] = `
Array [
  Method {
    "description": "",
    "location": Location {
      "range": Range {
        "end": 2290,
        "start": 2236,
      },
      "relativeUri": "case/global_symbols.php",
    },
    "modifier": SymbolModifier {
      "modifier": 32,
      "visibility": 1,
    },
    "name": TypeName {
      "name": "staticTestMethod",
    },
    "scope": null,
  },
  Property {
    "description": "",
    "location": Location {
      "range": Range {
        "end": 2203,
        "start": 2184,
      },
      "relativeUri": "case/global_symbols.php",
    },
    "modifier": SymbolModifier {
      "modifier": 32,
      "visibility": 1,
    },
    "name": "$staticTestProperty",
    "scope": null,
  },
  ClassConstant {
    "location": Location {
      "range": Range {
        "end": 2164,
        "start": 2142,
      },
      "relativeUri": "case/global_symbols.php",
    },
    "name": TypeName {
      "name": "TEST_CLASS_CONST",
    },
    "scope": null,
  },
]
`;

exports[`completion completion for current scoped member references 3`] = `
Array [
  Method {
    "description": "",
    "location": Location {
      "range": Range {
        "end": 184,
        "start": 115,
      },
      "relativeUri": "case/completion/currentScopedMember.php",
    },
    "modifier": SymbolModifier {
      "modifier": 32,
      "visibility": 1,
    },
    "name": TypeName {
      "name": "GetNumCpus",
    },
    "scope": TypeName {
      "name": "\\\\CurrentScopedMember",
    },
  },
  Property {
    "description": "",
    "location": Location {
      "range": Range {
        "end": 106,
        "start": 93,
      },
      "relativeUri": "case/completion/currentScopedMember.php",
    },
    "modifier": SymbolModifier {
      "modifier": 32,
      "visibility": 2,
    },
    "name": "$NUM_CPUS",
    "scope": TypeName {
      "name": "\\\\CurrentScopedMember",
    },
  },
  ClassConstant {
    "location": Location {
      "range": Range {
        "end": 67,
        "start": 48,
      },
      "relativeUri": "case/completion/currentScopedMember.php",
    },
    "name": TypeName {
      "name": "SYSTEM_NUM_CPUS",
    },
    "scope": TypeName {
      "name": "\\\\CurrentScopedMember",
    },
  },
]
`;

exports[`completion completion for scoped member references 1`] = `
Array [
  Method {
    "description": "Do magna consequat veniam minim proident eiusmod incididunt aute proident.",
    "location": Location {
      "range": Range {
        "end": 1583,
        "start": 1493,
      },
      "relativeUri": "case/global_symbols.php",
    },
    "modifier": SymbolModifier {
      "modifier": 32,
      "visibility": 1,
    },
    "name": TypeName {
      "name": "staticTestMethod",
    },
    "scope": TypeName {
      "name": "\\\\TestClass",
    },
  },
  Property {
    "description": "Lorem excepteur officia sit anim velit veniam enim.
",
    "location": Location {
      "range": Range {
        "end": 1266,
        "start": 1247,
      },
      "relativeUri": "case/global_symbols.php",
    },
    "modifier": SymbolModifier {
      "modifier": 32,
      "visibility": 1,
    },
    "name": "$staticTestProperty",
    "scope": TypeName {
      "name": "\\\\TestClass",
    },
  },
  ClassConstant {
    "location": Location {
      "range": Range {
        "end": 1120,
        "start": 1098,
      },
      "relativeUri": "case/global_symbols.php",
    },
    "name": TypeName {
      "name": "TEST_CLASS_CONST",
    },
    "scope": TypeName {
      "name": "\\\\TestClass",
    },
  },
]
`;

exports[`completion completion for scoped member references 2`] = `
Array [
  Property {
    "description": "Lorem excepteur officia sit anim velit veniam enim.
",
    "location": Location {
      "range": Range {
        "end": 1266,
        "start": 1247,
      },
      "relativeUri": "case/global_symbols.php",
    },
    "modifier": SymbolModifier {
      "modifier": 32,
      "visibility": 1,
    },
    "name": "$staticTestProperty",
    "scope": TypeName {
      "name": "\\\\TestClass",
    },
  },
]
`;

exports[`completion completion for scoped member references 3`] = `
Array [
  Method {
    "description": "Do magna consequat veniam minim proident eiusmod incididunt aute proident.",
    "location": Location {
      "range": Range {
        "end": 1583,
        "start": 1493,
      },
      "relativeUri": "case/global_symbols.php",
    },
    "modifier": SymbolModifier {
      "modifier": 32,
      "visibility": 1,
    },
    "name": TypeName {
      "name": "staticTestMethod",
    },
    "scope": TypeName {
      "name": "\\\\TestClass",
    },
  },
  ClassConstant {
    "location": Location {
      "range": Range {
        "end": 1120,
        "start": 1098,
      },
      "relativeUri": "case/global_symbols.php",
    },
    "name": TypeName {
      "name": "TEST_CLASS_CONST",
    },
    "scope": TypeName {
      "name": "\\\\TestClass",
    },
  },
]
`;

exports[`completion completion for scoped member references 4`] = `
Array [
  ClassConstant {
    "location": Location {
      "range": Range {
        "end": 1120,
        "start": 1098,
      },
      "relativeUri": "case/global_symbols.php",
    },
    "name": TypeName {
      "name": "TEST_CLASS_CONST",
    },
    "scope": TypeName {
      "name": "\\\\TestClass",
    },
  },
]
`;

exports[`completion completion for scoped member references 5`] = `Array []`;
